--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h1> Hi! I'M IQRA AWAN</h1>
             <br>
            <P>I am currently enrolled in web designing programming after completing my degree in business.</P>
-          <a target="_blank"  href="E:\HACAKTHON\index.html "><button>more details</button></a>
+          <a target="_blank"  href="E:\HACAKTHON\milstone 1\index1.html "><button>more details</button></a>
             </div>
         </div>
     
